packages/vib3_flutter/src/vib3_ffi.h

// ============================================================================
// Types
// ============================================================================

typedef struct Vib3Vec4 {
    float x, y, z, w;
} Vib3Vec4;
typedef struct Vib3Rotor4D {
    float s;      // Scalar
    float xy;     // Bivector XY
    float xz;     // Bivector XZ
    float yz;     // Bivector YZ
    float xw;     // Bivector XW
    float yw;     // Bivector YW
    float zw;     // Bivector ZW
    float xyzw;   // Pseudoscalar
} Vib3Rotor4D;
typedef struct Vib3Mat4x4 {
    float data[16];
} Vib3Mat4x4;
typedef enum Vib3RotationPlane {
    VIB3_PLANE_XY = 0,
    VIB3_PLANE_XZ = 1,
    VIB3_PLANE_YZ = 2,
    VIB3_PLANE_XW = 3,
    VIB3_PLANE_YW = 4,
    VIB3_PLANE_ZW = 5
} Vib3RotationPlane;
// ============================================================================
// Vec4 Functions
// ============================================================================

VIB3_EXPORT Vib3Vec4* vib3_vec4_create(float x, float y, float z, float w);
VIB3_EXPORT void vib3_vec4_free(Vib3Vec4* v);
VIB3_EXPORT float vib3_vec4_dot(const Vib3Vec4* a, const Vib3Vec4* b);
VIB3_EXPORT float vib3_vec4_length(const Vib3Vec4* v);
VIB3_EXPORT void vib3_vec4_normalize(Vib3Vec4* v);
VIB3_EXPORT Vib3Vec4* vib3_vec4_add(const Vib3Vec4* a, const Vib3Vec4* b);
VIB3_EXPORT Vib3Vec4* vib3_vec4_sub(const Vib3Vec4* a, const Vib3Vec4* b);
VIB3_EXPORT Vib3Vec4* vib3_vec4_scale(const Vib3Vec4* v, float s);
VIB3_EXPORT Vib3Vec4* vib3_vec4_lerp(const Vib3Vec4* a, const Vib3Vec4* b, float t);
// ============================================================================
// Rotor4D Functions
// ============================================================================

VIB3_EXPORT Vib3Rotor4D* vib3_rotor4d_identity(void);
VIB3_EXPORT Vib3Rotor4D* vib3_rotor4d_from_plane_angle(Vib3RotationPlane plane, float angle);
VIB3_EXPORT Vib3Rotor4D* vib3_rotor4d_from_euler6(
    float xy, float xz, float yz,
    float xw, float yw, float zw
);
VIB3_EXPORT void vib3_rotor4d_free(Vib3Rotor4D* r);
VIB3_EXPORT Vib3Rotor4D* vib3_rotor4d_multiply(const Vib3Rotor4D* a, const Vib3Rotor4D* b);
VIB3_EXPORT Vib3Vec4* vib3_rotor4d_rotate(const Vib3Rotor4D* r, const Vib3Vec4* v);
VIB3_EXPORT Vib3Rotor4D* vib3_rotor4d_slerp(const Vib3Rotor4D* a, const Vib3Rotor4D* b, float t);
VIB3_EXPORT void vib3_rotor4d_normalize(Vib3Rotor4D* r);
VIB3_EXPORT Vib3Mat4x4* vib3_rotor4d_to_matrix(const Vib3Rotor4D* r);
// ============================================================================
// Mat4x4 Functions
// ============================================================================

VIB3_EXPORT Vib3Mat4x4* vib3_mat4x4_identity(void);
VIB3_EXPORT Vib3Mat4x4* vib3_mat4x4_rotation_xy(float angle);
VIB3_EXPORT Vib3Mat4x4* vib3_mat4x4_rotation_xz(float angle);
VIB3_EXPORT Vib3Mat4x4* vib3_mat4x4_rotation_yz(float angle);
VIB3_EXPORT Vib3Mat4x4* vib3_mat4x4_rotation_xw(float angle);
VIB3_EXPORT Vib3Mat4x4* vib3_mat4x4_rotation_yw(float angle);
VIB3_EXPORT Vib3Mat4x4* vib3_mat4x4_rotation_zw(float angle);
VIB3_EXPORT Vib3Mat4x4* vib3_mat4x4_rotation_from_angles(
    float xy, float xz, float yz,
    float xw, float yw, float zw
);
VIB3_EXPORT void vib3_mat4x4_free(Vib3Mat4x4* m);
VIB3_EXPORT Vib3Mat4x4* vib3_mat4x4_multiply(const Vib3Mat4x4* a, const Vib3Mat4x4* b);
VIB3_EXPORT Vib3Vec4* vib3_mat4x4_multiply_vec4(const Vib3Mat4x4* m, const Vib3Vec4* v);
// ============================================================================
// Projection Functions
// ============================================================================

VIB3_EXPORT Vib3Vec4* vib3_project_perspective(const Vib3Vec4* v, float distance);
VIB3_EXPORT Vib3Vec4* vib3_project_stereographic(const Vib3Vec4* v);
VIB3_EXPORT Vib3Vec4* vib3_project_orthographic(const Vib3Vec4* v);
// ============================================================================
// Command Batching
// ============================================================================

VIB3_EXPORT int32_t vib3_process_command_batch(
    const uint8_t* commands,
    uint32_t size,
    uint8_t* results
);