packages/vib3_flutter/lib/src/ffi/vib3_ffi.dart

/// VIB3+ Dart FFI Bindings
///
/// Provides direct access to the C++ core via FFI for high-performance
/// 4D geometry operations.
library vib3_ffi;

import 'dart:ffi';
import 'dart:io';
import 'dart:math' as math;
import 'dart:typed_data';

import 'package:ffi/ffi.dart' as pkg_ffi;

// ============================================================================
// Native Library Loading
// ============================================================================

/// Load the native VIB3 library based on platform
DynamicLibrary _loadLibrary() {
  if (Platform.isAndroid) {
    return DynamicLibrary.open('libvib3_flutter.so');
  } else if (Platform.isIOS) {
    return DynamicLibrary.process();
  } else if (Platform.isMacOS) {
    return DynamicLibrary.process();
  } else if (Platform.isWindows) {
    return DynamicLibrary.open('vib3_flutter.dll');
  } else if (Platform.isLinux) {
    return DynamicLibrary.open('libvib3_flutter.so');
  }
  throw UnsupportedError('Unsupported platform: ${Platform.operatingSystem}');
}

/// Global native library instance
final DynamicLibrary _nativeLib = _loadLibrary();

// ============================================================================
// Native Structs
// ============================================================================

/// Native Vec4 structure
final class NativeVec4 extends Struct {
  @Float()
  external double x;

  @Float()
  external double y;

  @Float()
  external double z;

  @Float()
  external double w;
}

/// Native Rotor4D structure (8 components)
final class NativeRotor4D extends Struct {
  @Float()
  external double s;

  @Float()
  external double xy;

  @Float()
  external double xz;

  @Float()
  external double yz;

  @Float()
  external double xw;

  @Float()
  external double yw;

  @Float()
  external double zw;

  @Float()
  external double xyzw;
}

/// Native 4x4 Matrix (column-major, 64 bytes)
final class NativeMat4x4 extends Struct {
  @Array(16)
  external Array<Float> data;
}

// ============================================================================
// Native Function Typedefs
// ============================================================================

// Vec4 operations
typedef _Vec4CreateNative = Pointer<NativeVec4> Function(Float x, Float y, Float z, Float w);
typedef _Vec4Create = Pointer<NativeVec4> Function(double x, double y, double z, double w);

typedef _Vec4DotNative = Float Function(Pointer<NativeVec4> a, Pointer<NativeVec4> b);
typedef _Vec4Dot = double Function(Pointer<NativeVec4> a, Pointer<NativeVec4> b);

typedef _Vec4LengthNative = Float Function(Pointer<NativeVec4> v);
typedef _Vec4Length = double Function(Pointer<NativeVec4> v);

typedef _Vec4NormalizeNative = Void Function(Pointer<NativeVec4> v);
typedef _Vec4Normalize = void Function(Pointer<NativeVec4> v);

typedef _Vec4FreeNative = Void Function(Pointer<NativeVec4> v);
typedef _Vec4Free = void Function(Pointer<NativeVec4> v);

typedef _Vec4BinaryNative = Pointer<NativeVec4> Function(Pointer<NativeVec4> a, Pointer<NativeVec4> b);
typedef _Vec4Binary = Pointer<NativeVec4> Function(Pointer<NativeVec4> a, Pointer<NativeVec4> b);

typedef _Vec4ScaleNative = Pointer<NativeVec4> Function(Pointer<NativeVec4> v, Float s);
typedef _Vec4Scale = Pointer<NativeVec4> Function(Pointer<NativeVec4> v, double s);

typedef _Vec4LerpNative = Pointer<NativeVec4> Function(Pointer<NativeVec4> a, Pointer<NativeVec4> b, Float t);
typedef _Vec4Lerp = Pointer<NativeVec4> Function(Pointer<NativeVec4> a, Pointer<NativeVec4> b, double t);

// Rotor4D operations
typedef _Rotor4DIdentityNative = Pointer<NativeRotor4D> Function();
typedef _Rotor4DIdentity = Pointer<NativeRotor4D> Function();

typedef _Rotor4DFromPlaneAngleNative = Pointer<NativeRotor4D> Function(Int32 plane, Float angle);
typedef _Rotor4DFromPlaneAngle = Pointer<NativeRotor4D> Function(int plane, double angle);

typedef _Rotor4DFromEuler6Native = Pointer<NativeRotor4D> Function(
  Float xy, Float xz, Float yz, Float xw, Float yw, Float zw
);
typedef _Rotor4DFromEuler6 = Pointer<NativeRotor4D> Function(
  double xy, double xz, double yz, double xw, double yw, double zw
);

typedef _Rotor4DMultiplyNative = Pointer<NativeRotor4D> Function(
  Pointer<NativeRotor4D> a, Pointer<NativeRotor4D> b
);
typedef _Rotor4DMultiply = Pointer<NativeRotor4D> Function(
  Pointer<NativeRotor4D> a, Pointer<NativeRotor4D> b
);

typedef _Rotor4DRotateNative = Pointer<NativeVec4> Function(
  Pointer<NativeRotor4D> r, Pointer<NativeVec4> v
);
typedef _Rotor4DRotate = Pointer<NativeVec4> Function(
  Pointer<NativeRotor4D> r, Pointer<NativeVec4> v
);

typedef _Rotor4DSlerpNative = Pointer<NativeRotor4D> Function(
  Pointer<NativeRotor4D> a, Pointer<NativeRotor4D> b, Float t
);
typedef _Rotor4DSlerp = Pointer<NativeRotor4D> Function(
  Pointer<NativeRotor4D> a, Pointer<NativeRotor4D> b, double t
);

typedef _Rotor4DFreeNative = Void Function(Pointer<NativeRotor4D> r);
typedef _Rotor4DFree = void Function(Pointer<NativeRotor4D> r);

typedef _Rotor4DNormalizeNative = Void Function(Pointer<NativeRotor4D> r);
typedef _Rotor4DNormalize = void Function(Pointer<NativeRotor4D> r);

typedef _Rotor4DToMatrixNative = Pointer<NativeMat4x4> Function(Pointer<NativeRotor4D> r);
typedef _Rotor4DToMatrix = Pointer<NativeMat4x4> Function(Pointer<NativeRotor4D> r);

// Mat4x4 operations
typedef _Mat4x4IdentityNative = Pointer<NativeMat4x4> Function();
typedef _Mat4x4Identity = Pointer<NativeMat4x4> Function();

typedef _Mat4x4RotationSingleNative = Pointer<NativeMat4x4> Function(Float angle);
typedef _Mat4x4RotationSingle = Pointer<NativeMat4x4> Function(double angle);

typedef _Mat4x4RotationFromAnglesNative = Pointer<NativeMat4x4> Function(
  Float xy, Float xz, Float yz, Float xw, Float yw, Float zw
);
typedef _Mat4x4RotationFromAngles = Pointer<NativeMat4x4> Function(
  double xy, double xz, double yz, double xw, double yw, double zw
);

typedef _Mat4x4MultiplyNative = Pointer<NativeMat4x4> Function(
  Pointer<NativeMat4x4> a, Pointer<NativeMat4x4> b
);
typedef _Mat4x4Multiply = Pointer<NativeMat4x4> Function(
  Pointer<NativeMat4x4> a, Pointer<NativeMat4x4> b
);

typedef _Mat4x4MultiplyVec4Native = Pointer<NativeVec4> Function(
  Pointer<NativeMat4x4> m, Pointer<NativeVec4> v
);
typedef _Mat4x4MultiplyVec4 = Pointer<NativeVec4> Function(
  Pointer<NativeMat4x4> m, Pointer<NativeVec4> v
);

typedef _Mat4x4FreeNative = Void Function(Pointer<NativeMat4x4> m);
typedef _Mat4x4Free = void Function(Pointer<NativeMat4x4> m);

// Projection operations
typedef _ProjectPerspectiveNative = Pointer<NativeVec4> Function(
  Pointer<NativeVec4> v, Float distance
);
typedef _ProjectPerspective = Pointer<NativeVec4> Function(
  Pointer<NativeVec4> v, double distance
);

typedef _ProjectStereographicNative = Pointer<NativeVec4> Function(Pointer<NativeVec4> v);
typedef _ProjectStereographic = Pointer<NativeVec4> Function(Pointer<NativeVec4> v);

typedef _ProjectOrthographicNative = Pointer<NativeVec4> Function(Pointer<NativeVec4> v);
typedef _ProjectOrthographic = Pointer<NativeVec4> Function(Pointer<NativeVec4> v);

// Batch operations
typedef _ProcessCommandBatchNative = Int32 Function(
  Pointer<Uint8> commands, Uint32 size, Pointer<Uint8> results
);
typedef _ProcessCommandBatch = int Function(
  Pointer<Uint8> commands, int size, Pointer<Uint8> results
);

// Utility
typedef _VersionNative = Pointer<pkg_ffi.Utf8> Function();
typedef _Version = Pointer<pkg_ffi.Utf8> Function();

typedef _GeometryNameNative = Pointer<pkg_ffi.Utf8> Function(Int32 index);
typedef _GeometryName = Pointer<pkg_ffi.Utf8> Function(int index);

typedef _HasSimdNative = Bool Function();
typedef _HasSimd = bool Function();

// ============================================================================
// Native Function Bindings
// ============================================================================

// Vec4
final _vec4Create = _nativeLib.lookupFunction<_Vec4CreateNative, _Vec4Create>('vib3_vec4_create');
final _vec4Dot = _nativeLib.lookupFunction<_Vec4DotNative, _Vec4Dot>('vib3_vec4_dot');
final _vec4Length = _nativeLib.lookupFunction<_Vec4LengthNative, _Vec4Length>('vib3_vec4_length');
final _vec4Normalize = _nativeLib.lookupFunction<_Vec4NormalizeNative, _Vec4Normalize>('vib3_vec4_normalize');
final _vec4Free = _nativeLib.lookupFunction<_Vec4FreeNative, _Vec4Free>('vib3_vec4_free');
final _vec4Add = _nativeLib.lookupFunction<_Vec4BinaryNative, _Vec4Binary>('vib3_vec4_add');
final _vec4Sub = _nativeLib.lookupFunction<_Vec4BinaryNative, _Vec4Binary>('vib3_vec4_sub');
final _vec4Scale = _nativeLib.lookupFunction<_Vec4ScaleNative, _Vec4Scale>('vib3_vec4_scale');
final _vec4Lerp = _nativeLib.lookupFunction<_Vec4LerpNative, _Vec4Lerp>('vib3_vec4_lerp');

// Rotor4D
final _rotor4DIdentity = _nativeLib.lookupFunction<_Rotor4DIdentityNative, _Rotor4DIdentity>('vib3_rotor4d_identity');
final _rotor4DFromPlaneAngle = _nativeLib.lookupFunction<_Rotor4DFromPlaneAngleNative, _Rotor4DFromPlaneAngle>('vib3_rotor4d_from_plane_angle');
final _rotor4DFromEuler6 = _nativeLib.lookupFunction<_Rotor4DFromEuler6Native, _Rotor4DFromEuler6>('vib3_rotor4d_from_euler6');
final _rotor4DMultiply = _nativeLib.lookupFunction<_Rotor4DMultiplyNative, _Rotor4DMultiply>('vib3_rotor4d_multiply');
final _rotor4DRotate = _nativeLib.lookupFunction<_Rotor4DRotateNative, _Rotor4DRotate>('vib3_rotor4d_rotate');
final _rotor4DSlerp = _nativeLib.lookupFunction<_Rotor4DSlerpNative, _Rotor4DSlerp>('vib3_rotor4d_slerp');
final _rotor4DFree = _nativeLib.lookupFunction<_Rotor4DFreeNative, _Rotor4DFree>('vib3_rotor4d_free');
final _rotor4DNormalize = _nativeLib.lookupFunction<_Rotor4DNormalizeNative, _Rotor4DNormalize>('vib3_rotor4d_normalize');
final _rotor4DToMatrix = _nativeLib.lookupFunction<_Rotor4DToMatrixNative, _Rotor4DToMatrix>('vib3_rotor4d_to_matrix');

// Mat4x4
final _mat4x4Identity = _nativeLib.lookupFunction<_Mat4x4IdentityNative, _Mat4x4Identity>('vib3_mat4x4_identity');
final _mat4x4RotationXY = _nativeLib.lookupFunction<_Mat4x4RotationSingleNative, _Mat4x4RotationSingle>('vib3_mat4x4_rotation_xy');
final _mat4x4RotationXZ = _nativeLib.lookupFunction<_Mat4x4RotationSingleNative, _Mat4x4RotationSingle>('vib3_mat4x4_rotation_xz');
final _mat4x4RotationYZ = _nativeLib.lookupFunction<_Mat4x4RotationSingleNative, _Mat4x4RotationSingle>('vib3_mat4x4_rotation_yz');
final _mat4x4RotationXW = _nativeLib.lookupFunction<_Mat4x4RotationSingleNative, _Mat4x4RotationSingle>('vib3_mat4x4_rotation_xw');
final _mat4x4RotationYW = _nativeLib.lookupFunction<_Mat4x4RotationSingleNative, _Mat4x4RotationSingle>('vib3_mat4x4_rotation_yw');
final _mat4x4RotationZW = _nativeLib.lookupFunction<_Mat4x4RotationSingleNative, _Mat4x4RotationSingle>('vib3_mat4x4_rotation_zw');
final _mat4x4RotationFromAngles = _nativeLib.lookupFunction<_Mat4x4RotationFromAnglesNative, _Mat4x4RotationFromAngles>('vib3_mat4x4_rotation_from_angles');
final _mat4x4Multiply = _nativeLib.lookupFunction<_Mat4x4MultiplyNative, _Mat4x4Multiply>('vib3_mat4x4_multiply');
final _mat4x4MultiplyVec4 = _nativeLib.lookupFunction<_Mat4x4MultiplyVec4Native, _Mat4x4MultiplyVec4>('vib3_mat4x4_multiply_vec4');
final _mat4x4Free = _nativeLib.lookupFunction<_Mat4x4FreeNative, _Mat4x4Free>('vib3_mat4x4_free');

// Projection
final _projectPerspective = _nativeLib.lookupFunction<_ProjectPerspectiveNative, _ProjectPerspective>('vib3_project_perspective');
final _projectStereographic = _nativeLib.lookupFunction<_ProjectStereographicNative, _ProjectStereographic>('vib3_project_stereographic');
final _projectOrthographic = _nativeLib.lookupFunction<_ProjectOrthographicNative, _ProjectOrthographic>('vib3_project_orthographic');

// Batch
final _processCommandBatch = _nativeLib.lookupFunction<_ProcessCommandBatchNative, _ProcessCommandBatch>('vib3_process_command_batch');
